# vaaktra

./: Cargo.toml  README.md  build.rs  install.ps1  install.sh  requirements.md
sanskrit-lexer/: Cargo.toml
sanskrit-lexer/src/: lib.rs
sanskrit-parser/: Cargo.toml
sanskrit-parser/src/: ast.rs  span.rs
src/: main.rs
vaaktra-codegen/: Cargo.toml
vaaktra-codegen/src/: lib.rs  simple.rs
vaaktra-jit/: Cargo.toml
vaaktra-jit/src/: compiler.rs  lib.rs  memory.rs  optimizer.rs  runtime.rs
vaaktra-lexer/: Cargo.toml
vaaktra-lexer/src/: lib.rs
vaaktra-lexer/src/tests/: vedic_tests.rs
vaaktra-parser/: Cargo.toml
vaaktra-parser/src/: ast.rs  lib.rs  parser.rs
vaaktra-semantics/: Cargo.toml
vaaktra-semantics/src/: error.rs  lib.rs  symbol_table.rs  type_checker.rs
vaaktra-vm/: Cargo.toml
vaaktra-vm/src/: bytecode.rs  gc.rs  interpreter.rs  lib.rs  stack.rs
