[package]
name = "vaaktra"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A high-performance programming language based on Sanskrit"
license = "MIT"

[dependencies]
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
lalrpop-util = "0.20"

[dev-dependencies]
pretty_assertions = "1.3"

[workspace]
members = [
    "vaaktra-lexer",
    "vaaktra-parser",
    "vaaktra-semantics",
    "vaaktra-codegen",
    "vaaktra-vm",
]
