[package]
name = "vaaktra"
version = "0.1.0"
edition = "2021"
authors = ["Vāktra Team"]
description = "Vāktra (वाक्त्र) - A high-performance Sanskrit-inspired programming language"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vaaktra/vaaktra"
keywords = ["programming-language", "sanskrit", "compiler", "jit"]
categories = ["compilers"]
build = "build.rs"

# This is a binary crate (has a src/main.rs)
[[bin]]
name = "vaaktra"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
lalrpop-util = "0.20"

# Workspace dependencies
vaaktra-lexer = { path = "./vaaktra-lexer" }
vaaktra-parser = { path = "./vaaktra-parser" }
vaaktra-jit = { path = "./vaaktra-jit" }

[build-dependencies]
# Build script dependencies for automatic LLVM setup

[dev-dependencies]
pretty_assertions = "1.3"
criterion = "0.5"

[workspace]
members = [
    "vaaktra-lexer",
    "vaaktra-parser",
    "vaaktra-jit",
    # Additional high-performance crates
    "vaaktra-semantics",
    "vaaktra-codegen",
    "vaaktra-vm",
]

# Default to the member directory as the workspace root
resolver = "2"
workspace = "."
