[package]
name = "vaaktra-parser"
version = "0.1.0"
edition = "2021"
description = "Parser for the VÄktra programming language with Vedic-inspired syntax"

[dependencies]
vaaktra-lexer = { path = "../vaaktra-lexer" }
thiserror = "1.0"
log = "0.4"
logos = "0.13"
lalrpop-util = { version = "0.20", features = ["lexer"] }
regex = "1.10"

[dev-dependencies]
pretty_assertions = "1.3"
insta = { version = "1.35", features = ["yaml"] }
test-case = "3.3"
